maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: Unit does not take parameters
			avance()()
                                ^Escaper:8: error: Unit does not take parameters
		droite()()
                        ^